crates/plotnik-compiler/src/emit/snapshots/plotnik_lib__emit__emit_tests__captures_with_type_string.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Test = (identifier) @name :: string
---
[strings]
S0 "Beauty will save the world"
S1 "name"
S2 "Test"
S3 "identifier"

[type_defs]
T0 = <String>
T1 = Struct  M0:1  ; { name }

[type_members]
M0: S1 → T0  ; name: <String>

[type_names]
N0: S2 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    08
  07  ...  
  08   !   (identifier) [Text Set(M0)]      10
  10                                        ▶
