crates/plotnik-compiler/src/emit/snapshots/plotnik_lib__emit__emit_tests__definitions_nested_capture.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Inner = (call_expression (identifier) @name)
Outer = (array {(Inner) @item}* @items)
---
[strings]
S0 "Beauty will save the world"
S1 "name"
S2 "item"
S3 "items"
S4 "Inner"
S5 "Outer"
S6 "call_expression"
S7 "identifier"
S8 "array"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { name }
T2 = Struct  M1:1  ; { item }
T3 = ArrayStar(T2)  ; T2*
T4 = Struct  M2:1  ; { items }

[type_members]
M0: S1 → T0  ; name: <Node>
M1: S2 → T1  ; item: Inner
M2: S3 → T3  ; items: T3

[type_names]
N0: S4 → T1  ; Inner
N1: S5 → T4  ; Outer

[entrypoints]
Inner = 06 :: T1
Outer = 12 :: T4

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Inner:
  06   ε                                    07
  07   !   (call_expression)                08
  08   ▽   (identifier) [Node Set(M0)]      10
  10   △   _                                11
  11                                        ▶

Outer:
  12   ε                                    13
  13   !   (array)                          14
  14   ε   [Arr]                            16
  16   ε                                    44, 27
  18   ε   [EndArr Set(M2)]                 20
  20   △   _                                26
  21   ε   [EndObj Push]                    24
  23  ...  
  24   ε                                    50, 18
  26                                        ▶
  27   ε   [EndArr Set(M2)]                 26
  29   ε   [Set(M1)]                        21
  31  ...  
  32   ε   [EndObj]                         29
  34   !   (Inner)                          06 : 32
  35   ε   [Obj]                            34
  37   ε   [Obj]                            35
  39   ▷   _                                42
  40   ε                                    39, 18
  42   ε                                    37, 40
  44   ▽   _                                42
  45   ▷   _                                48
  46   ε                                    45, 18
  48   ε                                    37, 46
  50   ▷   _                                48
