crates/plotnik-compiler/src/emit/snapshots/plotnik_lib__emit__emit_tests__fields_alternation.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Test = (call_expression function: [(identifier) @fn (number) @num])
---
[strings]
S0 "Beauty will save the world"
S1 "fn"
S2 "num"
S3 "Test"
S4 "call_expression"
S5 "identifier"
S6 "number"
S7 "function"

[type_defs]
T0 = <Node>
T1 = Struct  M0:2  ; { fn, num }
T2 = Struct  M2:1  ; { fn }
T3 = Struct  M3:1  ; { num }
T4 = Optional(T0)  ; <Node>?

[type_members]
M0: S1 → T4  ; fn: T4
M1: S2 → T4  ; num: T4
M2: S1 → T0  ; fn: <Node>
M3: S2 → T0  ; num: <Node>

[type_names]
N0: S3 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    07
  07   !   (call_expression)                08
  08   ▽   function: _                      09
  09   ε                                    12, 16
  11                                        ▶
  12   !   [Null Set(M1)] (identifier) [Node Set(M0)]  19
  15  ...  
  16   !   [Null Set(M0)] (number) [Node Set(M1)]  19
  19   △   _                                11
