crates/plotnik-compiler/src/emit/snapshots/plotnik_lib__emit__emit_tests__fields_negated.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Test = (pair key: (property_identifier) @key -value)
---
[strings]
S0 "Beauty will save the world"
S1 "key"
S2 "Test"
S3 "pair"
S4 "property_identifier"
S5 "value"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { key }

[type_members]
M0: S1 → T0  ; key: <Node>

[type_names]
N0: S2 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    08
  07  ...  
  08   !   -value (pair)                    10
  10   ▽   key: (property_identifier) [Node Set(M0)]  12
  12   △   _                                13
  13                                        ▶
